--- a/src/style.css
+++ b/src/style.css
@@ -11,7 +11,7 @@ body {
 
 nav {
   width: 100%;
-  background-color: #bbbbbb;
+  background-color: #5b85d69c;  
   border-bottom: 2px solid rgb(94, 95, 102);
 }
 
@@ -22,8 +22,9 @@ main {
 }
 
 section {
+  background-color: #ebebeb;
+  border: 3px #bbbbbb solid;
   display: grid;
-  grid-gap: 1%;
   width: 100%;
   margin: 10px auto;
 }
@@ -47,16 +48,19 @@ h3 {
 }
 
 h2 {
-  grid-column: span 2;
-  width: 100%;
+  grid-column: span 1;
+  padding-left: 20px;
+  max-width: 50%;
 }
 
 #sleep-title {
-  grid-column: span 3;
+  grid-column: span 2;
 }
 
 h1 {
+  color: white;
   margin: 0;
+  padding-left: 10px;
   text-align: left;
 }
 
@@ -65,9 +69,8 @@ h1 {
 }
 
 article {
-  background-color: rgb(247, 247, 247);
-  border: 2px #bbbbbb solid;
-  border-radius: 5px;
+  background-color: #ebebeb;
+  border: 2px #d8d8d8 solid;
   width: 100%;
   overflow: scroll;
   padding: 15px;
@@ -104,4 +107,10 @@ table {
 
 #ounces-drank {
   font-size: 3em;
+}
+
+.toggle-button {
+  font-size: 3em;
+  margin-left: auto;
+  width: 100px;
 }
