--- a/src/style.css
+++ b/src/style.css
@@ -48,13 +48,13 @@ h3 {
 }
 
 h2 {
-  grid-column: span 1;
+  grid-column: span 2;
   padding-left: 20px;
   max-width: 50%;
 }
 
 #sleep-title {
-  grid-column: span 2;
+  grid-column: span 3;
 }
 
 h1 {
@@ -113,4 +113,28 @@ table {
   font-size: 3em;
   margin-left: auto;
   width: 100px;
+}
+
+@media only screen and (max-width: 700px) {
+  
+  section {
+    grid-template-columns: 1fr; 
+  }
+
+  article {
+    grid-column: span 2; 
+  }
+
+  #hydration,
+  #user-data {
+    grid-template-columns: 1fr;
+  }
+
+  #physical-activity {
+    grid-template-columns: 1fr;
+  }
+
+  #sleep {
+    grid-template-columns: 1fr;
+  }
 }
